tinyc/test/bad/enum-redeclaration-single-global.c
enum {
    x = 10,
    x = 10,
};

int main()
{
    return 0;
}
